Port FactoryPanelModel
Moves onto DataDrivenModel and builds its panel geometry from parts. The
per-vertex normal work is dropped: the old code computed a normal and
then wrote a constant over it, so only the positions ever mattered. The
quad's own direction still drives the rotation.

Error sites 3251 -> 3236 for the tank and cloth, this on top.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015MrNR1fAyBSwvLxGyVA4tb